--- a/configs/atmel_sama5d3_xplained_spiflash_defconfig
+++ b/configs/atmel_sama5d3_xplained_spiflash_defconfig
@@ -25,3 +25,5 @@ BR2_TARGET_UBOOT_CUSTOM_TARBALL_LOCATION="$(call github,rickyrockrat,u-boot-at91
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="sama5d3_xplained_serialflash"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
 BR2_PACKAGE_HOST_SAM_BA=y
+BR2_ROOTFS_POST_IMAGE_SCRIPT="support/scripts/genimage.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="-c board/atmel/sama5d3_xplained_spi/genimage.cfg"
