Added host genimage

--- a/configs/atmel_sama5d3_xplained_spiflash_defconfig
+++ b/configs/atmel_sama5d3_xplained_spiflash_defconfig
@@ -3,6 +3,7 @@ BR2_cortex_a5=y
 BR2_ARM_ENABLE_VFP=y
 BR2_ARM_INSTRUCTIONS_THUMB2=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_4=y
+BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,rickyrockrat,linux-at91,spi_boot)/linux-linux4sam_6.2.tar.gz"
