--- a/configs/atmel_sama5d3_xplained_spiflash_defconfig
+++ b/configs/atmel_sama5d3_xplained_spiflash_defconfig
@@ -3,7 +3,6 @@ BR2_cortex_a5=y
 BR2_ARM_ENABLE_VFP=y
 BR2_ARM_INSTRUCTIONS_THUMB2=y
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_4=y
-BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,rickyrockrat,linux-at91,spi_boot)/linux-linux4sam_6.2.tar.gz"
@@ -26,5 +25,11 @@ BR2_TARGET_UBOOT_CUSTOM_TARBALL_LOCATION="$(call github,rickyrockrat,u-boot-at91
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="sama5d3_xplained_serialflash"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
 BR2_PACKAGE_HOST_SAM_BA=y
-BR2_ROOTFS_POST_IMAGE_SCRIPT="support/scripts/genimage.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="-c board/atmel/sama5d3_xplained_spi/genimage.cfg"
+BR2_TARGET_ROOTFS_CPIO=y
+BR2_TARGET_ROOTFS_CPIO_NONE=y
+BR2_ROOTFS_POST_IMAGE_SCRIPT="board/atmel/sama5d3_xplained_spi/post-image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="board/atmel/uboot.its"
+BR2_PACKAGE_HOST_UBOOT_TOOLS=y
+BR2_PACKAGE_HOST_UBOOT_TOOLS=y
+BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
+BR2_PACKAGE_HOST_GENIMAGE=y
