--- a/configs/atmel_sama5d3_xplained_spiflash_defconfig
+++ b/configs/atmel_sama5d3_xplained_spiflash_defconfig
@@ -10,8 +10,7 @@ BR2_LINUX_KERNEL_DEFCONFIG="sama5d3"atmel_sama5d3_xplained_spiflash_defconfig
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="at91-sama5d3_xplained"
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
-BR2_LINUX_KERNEL_UIMAGE=y
-BR2_LINUX_KERNEL_UIMAGE_LOADADDR="0x22000000"
+BR2_LINUX_KERNEL_ZIMAGE=y
 BR2_TARGET_ROOTFS_SQUASHFS=y
 BR2_TARGET_ROOTFS_SQUASHFS4_GZIP=y
 BR2_TARGET_AT91BOOTSTRAP3=y
@@ -26,9 +25,9 @@ BR2_TARGET_UBOOT_BOARD_DEFCONFIG="sama5d3_xplained_serialflash"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
 BR2_PACKAGE_HOST_SAM_BA=y
 BR2_TARGET_ROOTFS_CPIO=y
-BR2_TARGET_ROOTFS_CPIO_NONE=y
+BR2_TARGET_ROOTFS_CPIO_GZIP=y
 BR2_ROOTFS_POST_IMAGE_SCRIPT="board/atmel/sama5d3_xplained_spi/post-image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="board/atmel/uboot.its"
+BR2_ROOTFS_POST_SCRIPT_ARGS="board/atmel/sama5d3_xplained_spi/uboot.its"
 BR2_PACKAGE_HOST_UBOOT_TOOLS=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
 BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
